# routes/auth.js
@@ -3,7 +3,7 @@ const { check } = require('express-validator');
 const router = express.Router();
 
 const { authorizeUser } = require('../middlewares/authorize')
-const { signup, verifyEmail, login } = require('../controllers/auth')
+const { signup, verifyEmail, login, updateProfile } = require('../controllers/auth')
 
 router.post('/register', [
     check('email').isEmail().withMessage('Must be a valid email address'),
@@ -11,5 +11,6 @@ router.post('/register', [
 ], signup)
 router.post('/verify-email', authorizeUser, verifyEmail);
 router.post('/login', login);
+router.post('/profile-update', authorizeUser, updateProfile);
 
 module.exports = router
